--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
     <title>Medium Excercise</title>
   </head>
   <body>
-   <div id="banner">
+    <div class="container">
+    <div id="banner">
       <h1>How to copy Medium in 10 minutes</h1>
       <p>This is a cheap version of course</p>
-   </div>
+     </div>
+     </div>
    <div class="container">
       <h2>Some title</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias voluptas, quod ex atque, blanditiis veniam harum, quia omnis eius iure unde ullam rerum esse. Nulla assumenda atque temporibus, ab nam.</p>
